--- a/W14/confirmation-mail.html
+++ b/W14/confirmation-mail.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Motor scooter rental company in Cozumel, Mexico.">
-    <title>Scoots | Resources</title>
+    <title>Scoots | Confirmation Mail</title>
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
@@ -44,7 +44,7 @@
             <a class="nav__link" href="tours.html">Tours</a>
           </li>
           <li class="nav__item">
-            <a class="nav__link nav__link--active" href="reservations.html">Reservations</a>
+            <a class="nav__link" href="reservations.html">Reservations</a>
           </li>
           <li class="nav__item">
             <a class="nav__link" href="contact.html">Contact</a>
@@ -55,52 +55,14 @@
 
     <!-- HERO -->
     <section class="hero hero--subpage">
-      <h2 class="hero__title">Resources</h2>
+      <h2 class="hero__title">Thank you!</h2>
+      <span class="hero__subtitle">Your message has been received!</span>
+      <a href="contact.html" class="hero__button">Send another message</a>
     </section>
 
 
     <!-- MAIN CONTENT -->
     <main class="main">
-
-      <section class="resources">
-        <ul>
-          <li>
-            <span>Jeep Photo by <a href="https://unsplash.com/@neonbrand" class="resources__link">NeONBRAND</a> on <a href="https://unsplash.com/photos/yDekvyZ52dU" class="resources__link">Unsplash</a></span>
-          </li>
-          <li>
-            <span>Scooters Photo by <a href="https://unsplash.com/@chuttersnap" class="resources__link">CHUTTERSNAP</a> on <a href="https://unsplash.com/photos/AcdxiyTSR0A" class="resources__link">Unsplash</a></span>
-          </li>
-          <li>
-            <span>ATV Photo by <a href="https://unsplash.com/@lightrisephoto" class="resources__link">Devon Divine</a> on <a href="https://unsplash.com/photos/cprzBezGXFY" class="resources__link">Unsplash</a></span>
-          </li>
-          <li>
-            <span>Scooters on Beach Photo by <a href="https://unsplash.com/@seemoris" class="resources__link">Devon Divine</a> on <a href="https://unsplash.com/photos/nhXV1T9LVMg" class="resources__link">Unsplash</a></span>
-          </li>
-          <li>
-            <span>Docked Cruise Ships Photo by <a href="https://unsplash.com/@damononroad" class="resources__link">Devon Divine</a> on <a href="https://unsplash.com/photos/AVZNtIKAtWA" class="resources__link">Unsplash</a></span>
-          </li>
-          <li>
-            <span>Whale Photo by <a href="https://unsplash.com/@vnbuchholz92" class="resources__link">Evan Buchholz</a> on <a href="https://unsplash.com/photos/1jyy7ouBb8M" class="resources__link">Unsplash</a></span>
-          </li>
-          <li>
-            <span>Chichen Itza Ruins Photo by <a href="https://unsplash.com/@kwakus" class="resources__link">E Mens</a> on <a href="https://unsplash.com/photos/hpC8h942zhk" class="resources__link">Unsplash</a></span>
-          </li>
-          <li>
-            Tour information provided by <a href="https://www.cozumel-tours.com/adventure-tours.htm" class="resources__link">Cozumel Tours</a>
-          </li>
-          <li>
-            Information about Cozumel provided by <a href="https://en.wikipedia.org/wiki/Cozumel" class="resources__link">Wikipedia</a>
-          </li>
-          <li>
-            Jeep copy provided by <a href="https://www.jeep.com/wrangler-4xe.html" class="resources__link">Jeep</a>
-          </li>
-          <li>
-            ATV copy provided by <a href="https://powersports.honda.com/atv-chooser" class="resources__link">Honda</a>
-          </li>
-          <li>Scooter copy provided by <a href="https://powersports.honda.com/street/scooter" class="resources__link">Honda</a></li>
-        </ul>
-      </section>
-
 
 
     </main>
