--- a/W14/index.html
+++ b/W14/index.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
-    <link rel="stylesheet" href="css/styles.css">
     <script>
       document.addEventListener('DOMContentLoaded', () => {
         fetchCurrentWeather();
@@ -25,8 +24,10 @@
     <!-- HEADER -->
     <header class="header">
       <div class="header__wrapper">
-        <h1 class="header__title">Scoots</h1>
-        <img src="images/logo_white.png" class="header__logo" alt="Scoots Logo">
+        <div>
+          <img src="images/logo_white.png" class="header__logo" alt="Scoots Logo">
+          <h1 class="header__title">Scoots</h1>
+        </div>
         <div class="header__hamburger" id="navigationToggleButton" onclick="toggleNavigationVisibility()">&#9776;</div>
       </div>
     </header>
@@ -58,7 +59,7 @@
     <section class="hero">
       <h2 class="hero__title">Scoots</h2>
       <span class="hero__subtitle">Scooters, Jeeps, and ATVs</span>
-      <p class="hero__description">We are a motor scooter rental company in Cozumel Mexico. Vehicles include Scooters, Jeeps, and side-by-side ATVs. With 2 locations on the island, we've got you covered as you spend your vacation with us!</p>
+      <p class="hero__description">A motor scooter rental company located in Cozumel, Mexico. Rent Scooters, Jeeps, and side-by-side ATVs for a day or a week. We have two locations on the island.</p>
       <a href="reservations.html" class="hero__button">Make a Reservation</a>
     </section>
 
@@ -72,7 +73,7 @@
           <div class="container">
             <article>
               <h3>Scooters</h3>
-              <p class="section__summary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus temporibus natus commodi corporis suscipit, itaque odio quidem ipsa adipisci quas nemo tempora repellendus corrupti facilis. Molestiae blanditiis voluptas incidunt sed.</p>
+              <p class="section__summary">Street smart. The scooter has come of age. And in this climate of high gas prices, not a moment too soon. For almost half a century, Honda has been committed to making transportation powerful, dependable, sophisticated, and, above all else, fun. Find out why you still meet the friendliest people on a Honda.</p>
             </article>
             <picture class="section__picture">
               <img src="images/placeholder.jpg" data-src="images/scooters_500.jpg" alt="People on scooters">
@@ -87,7 +88,7 @@
           <div class="container">
             <article>
               <h3>ATVs</h3>
-              <p class="section__summary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus temporibus natus commodi corporis suscipit, itaque odio quidem ipsa adipisci quas nemo tempora repellendus corrupti facilis. Molestiae blanditiis voluptas incidunt sed.</p>
+              <p class="section__summary">Life is better when you have some trusted help on the job – and a reliable partner on the trails. That’s why generations of enthusiasts have come to depend on the Honda FourTrax family. Our renowned lineup of all-terrain vehicles covers a wide range of sizes and uses, for any kind of job or adventure. Select your preferred transmission type, suspension setup and more using the slider tools below, and we’ll help you find the right vehicle. Each and every one is built Honda tough, with legendary quality and reliability.</p>
             </article>
             <picture class="section__picture">
               <img src="images/placeholder.jpg" data-src="images/atv_500.jpg" alt="People on scooters">
@@ -102,7 +103,7 @@
           <div class="container">
             <article>
               <h3>Jeeps</h3>
-              <p class="section__summary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Possimus temporibus natus commodi corporis suscipit, itaque odio quidem ipsa adipisci quas nemo tempora repellendus corrupti facilis. Molestiae blanditiis voluptas incidunt sed.</p>
+              <p class="section__summary">Climb over tough obstacles and go an exhilarating 0-60mph in 6 seconds. A plug-in hybrid turbocharged engine gives the Wrangler 4xe an impressive 375 horsepower and 470 pound-feet of instant torque for heart-pounding performance off-road and on-road.</p>
             </article>
             <picture class="section__picture">
               <img src="images/placeholder.jpg" data-src="images/jeep_500.jpg" alt="People on scooters">
