--- a/W14/tours.html
+++ b/W14/tours.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
-    <link rel="stylesheet" href="css/styles.css">
     <script>
       document.addEventListener('DOMContentLoaded', () => {
         updateFooter();
@@ -23,8 +22,10 @@
     <!-- HEADER -->
     <header class="header">
       <div class="header__wrapper">
-        <h1 class="header__title">Scoots</h1>
-        <img src="images/logo_white.png" class="header__logo" alt="Scoots Logo">
+        <div>
+          <img src="images/logo_white.png" class="header__logo" alt="Scoots Logo">
+          <h1 class="header__title">Scoots</h1>
+        </div>
         <div class="header__hamburger" id="navigationToggleButton" onclick="toggleNavigationVisibility()">&#9776;</div>
       </div>
     </header>
